# gtkmmOpenCvSample

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  opencv_view.cpp  opencv_view.h  window.cpp  window.h
